[gd_scene load_steps=27 format=3 uid="uid://dg4jq7vwylhv8"]

[ext_resource type="Script" path="res://Scenes/Levels/play_area.gd" id="1_h34r3"]
[ext_resource type="PackedScene" uid="uid://cjtehkfy71gwp" path="res://Scenes/Receiver Shapes/equal_triangle_receiver.tscn" id="2_05tja"]
[ext_resource type="PackedScene" uid="uid://dtyc21mp0igxq" path="res://Scenes/Assigned Shapes/player_equal_triangle.tscn" id="3_d4epq"]
[ext_resource type="PackedScene" uid="uid://bghxi2dd62e5f" path="res://Scenes/Assigned Shapes/player_heart.tscn" id="4_wynvf"]
[ext_resource type="PackedScene" uid="uid://m16oag8o3jjo" path="res://Scenes/Assigned Shapes/player_l.tscn" id="5_m5642"]
[ext_resource type="PackedScene" uid="uid://da1p1yfe3sndv" path="res://Scenes/Assigned Shapes/player_pentagon.tscn" id="6_jwqrm"]
[ext_resource type="PackedScene" uid="uid://dt0x6wrkwm5gb" path="res://Scenes/Assigned Shapes/player_right_triangle.tscn" id="7_rpwgb"]
[ext_resource type="PackedScene" uid="uid://cvk63spt3b3m0" path="res://Scenes/Assigned Shapes/player_star.tscn" id="8_jo8h5"]
[ext_resource type="PackedScene" uid="uid://2xjp10r8srvr" path="res://Scenes/Assigned Shapes/player_t.tscn" id="9_vbv5x"]
[ext_resource type="PackedScene" uid="uid://ss20cocnn4wv" path="res://Scenes/Receiver Shapes/heart_receiver.tscn" id="10_mc178"]
[ext_resource type="PackedScene" uid="uid://cuj0kpfsqg0hy" path="res://Scenes/Receiver Shapes/L_receiver.tscn" id="11_ujwsb"]
[ext_resource type="PackedScene" uid="uid://dk7wkos5wlk83" path="res://Scenes/Receiver Shapes/pentagon_receiver.tscn" id="12_8r5qg"]
[ext_resource type="PackedScene" uid="uid://dgdcniktoenve" path="res://Scenes/Receiver Shapes/right_triangle_receiver.tscn" id="13_8etfv"]
[ext_resource type="PackedScene" uid="uid://du6dfb804n6n7" path="res://Scenes/Receiver Shapes/star_receiver.tscn" id="14_e6xgm"]
[ext_resource type="PackedScene" uid="uid://ccwctama4o67d" path="res://Scenes/Receiver Shapes/t_receiver.tscn" id="15_4bs2g"]
[ext_resource type="AudioStream" uid="uid://btf6gu57t3fvj" path="res://Audio/WIP.wav" id="16_ac5yk"]
[ext_resource type="PackedScene" uid="uid://4nwl5v5p1sqm" path="res://Scenes/Hints/eq_triangle_hint.tscn" id="16_qwrf5"]
[ext_resource type="PackedScene" uid="uid://cu6srh074qd66" path="res://Scenes/Hints/heart_hint.tscn" id="17_ec2ct"]
[ext_resource type="PackedScene" uid="uid://tjtlhqg30pvk" path="res://Scenes/Hints/l_hint.tscn" id="18_xgfbu"]
[ext_resource type="PackedScene" uid="uid://gv1ncm27t7tl" path="res://Scenes/Hints/pent_hint.tscn" id="19_6al13"]
[ext_resource type="PackedScene" uid="uid://wgdnxwahtgrt" path="res://Scenes/Hints/star_hint.tscn" id="20_7sxmr"]
[ext_resource type="PackedScene" uid="uid://dvhiymgaq26iq" path="res://Scenes/Hints/t_hint.tscn" id="21_18lii"]
[ext_resource type="PackedScene" uid="uid://cfrxj2lsh51qj" path="res://Scenes/Hints/r_tri_hint.tscn" id="22_etebq"]

[sub_resource type="Curve2D" id="Curve2D_j2n5h"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 99.6868, 216.807, 0, 0, 0, 0, 375.017, 118.082, 0, 0, 0, 0, 790.546, 115.149, 0, 0, 0, 0, 987.618, 187.053, 0, 0, 0, 0, 989.674, 313.506, 0, 0, 0, 0, 804.021, 390.37, 0, 0, 0, 0, 559.068, 381.163, 0, 0, 0, 0, 401.83, 394.089, 0, 0, 0, 0, 157.238, 343.664, 0, 0, 0, 0, 92.4929, 283.133)
}
point_count = 10

[sub_resource type="LabelSettings" id="LabelSettings_6k64h"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_6gwfb"]
font_size = 62

[node name="Play Area" type="Node2D"]
script = ExtResource("1_h34r3")
receiverPattern = Array[int]([0, 2, 4, 6, 1, 3, 6])
receiverOrientation = Array[int]([0, 45, 0, -45, 0, 45, 0])
bpm = 120.0
beatOffset = 0.75

[node name="Beats" type="Timer" parent="."]
one_shot = true

[node name="PlayerShapes" type="Node2D" parent="."]
z_index = 2

[node name="Player Equal Triangle" parent="PlayerShapes" instance=ExtResource("3_d4epq")]
position = Vector2(406, -133)

[node name="Player Heart" parent="PlayerShapes" instance=ExtResource("4_wynvf")]
position = Vector2(1391, -188)

[node name="Player L" parent="PlayerShapes" instance=ExtResource("5_m5642")]
position = Vector2(614, -114)

[node name="Player Pentagon" parent="PlayerShapes" instance=ExtResource("6_jwqrm")]
position = Vector2(1137, -218)

[node name="Player Right Triangle" parent="PlayerShapes" instance=ExtResource("7_rpwgb")]
position = Vector2(807, -104)

[node name="Player Star" parent="PlayerShapes" instance=ExtResource("8_jo8h5")]
position = Vector2(1691, -181)

[node name="Player T" parent="PlayerShapes" instance=ExtResource("9_vbv5x")]
position = Vector2(194, -166)

[node name="Receivers" type="Node2D" parent="."]
z_index = 1

[node name="Triangle Receiver" parent="Receivers" instance=ExtResource("2_05tja")]
position = Vector2(408, -372)

[node name="Heart Receiver" parent="Receivers" instance=ExtResource("10_mc178")]
position = Vector2(1412, -444)

[node name="L Receiver" parent="Receivers" instance=ExtResource("11_ujwsb")]
position = Vector2(606, -395)

[node name="Pentagon Receiver" parent="Receivers" instance=ExtResource("12_8r5qg")]
position = Vector2(1164, -450)

[node name="Right Triangle Receiver" parent="Receivers" instance=ExtResource("13_8etfv")]
position = Vector2(829, -337)

[node name="Star Receiver" parent="Receivers" instance=ExtResource("14_e6xgm")]
position = Vector2(1673, -435)

[node name="T Receiver" parent="Receivers" instance=ExtResource("15_4bs2g")]
position = Vector2(197, -409)

[node name="Alt Receivers" type="Node2D" parent="."]
z_index = 1

[node name="Equal Triangle Receiver" parent="Alt Receivers" instance=ExtResource("2_05tja")]
position = Vector2(397, -675)

[node name="Heart Receiver" parent="Alt Receivers" instance=ExtResource("10_mc178")]
position = Vector2(1387, -710)

[node name="L Receiver" parent="Alt Receivers" instance=ExtResource("11_ujwsb")]
position = Vector2(602, -653)

[node name="Pentagon Receiver" parent="Alt Receivers" instance=ExtResource("12_8r5qg")]
position = Vector2(1145, -725)

[node name="Right Triangle Receiver" parent="Alt Receivers" instance=ExtResource("13_8etfv")]
position = Vector2(809, -620)

[node name="Star Receiver" parent="Alt Receivers" instance=ExtResource("14_e6xgm")]
position = Vector2(1669, -725)

[node name="T Receiver" parent="Alt Receivers" instance=ExtResource("15_4bs2g")]
position = Vector2(174, -689)

[node name="Hints" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0.258824)

[node name="EQ Triangle Hint" parent="Hints" instance=ExtResource("16_qwrf5")]
position = Vector2(399, -967)

[node name="Heart Hint" parent="Hints" instance=ExtResource("17_ec2ct")]
position = Vector2(1414, -973)

[node name="L Hint" parent="Hints" instance=ExtResource("18_xgfbu")]
position = Vector2(603, -945)

[node name="Pent Hint" parent="Hints" instance=ExtResource("19_6al13")]
position = Vector2(1141, -1012)

[node name="R Tri Hint" parent="Hints" instance=ExtResource("22_etebq")]
position = Vector2(819, -915)

[node name="Star Hint" parent="Hints" instance=ExtResource("20_7sxmr")]
position = Vector2(1671, -997)

[node name="T Hint" parent="Hints" instance=ExtResource("21_18lii")]
position = Vector2(176, -960)

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(45.5155, 26.4705)
scale = Vector2(0.967475, 1.21173)
curve = SubResource("Curve2D_j2n5h")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(99.6868, 216.807)
rotation = -0.344289

[node name="Receiver Positioner" type="Node2D" parent="Path2D/PathFollow2D"]

[node name="PathFollow2D2" type="PathFollow2D" parent="Path2D"]
position = Vector2(99.6868, 216.807)
rotation = -0.344289

[node name="Hint Positioner" type="Node2D" parent="Path2D/PathFollow2D2"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_ac5yk")

[node name="Score Text" type="Label" parent="."]
offset_left = 10.0
offset_top = 583.0
offset_right = 208.0
offset_bottom = 684.0
text = "Score: "
label_settings = SubResource("LabelSettings_6k64h")

[node name="Score Int" type="Label" parent="."]
offset_left = 136.0
offset_top = 588.0
offset_right = 298.0
offset_bottom = 678.0
label_settings = SubResource("LabelSettings_6gwfb")

[node name="Start" type="Button" parent="."]
offset_left = 490.0
offset_top = 403.0
offset_right = 666.0
offset_bottom = 495.0
text = "Start"

[node name="Instructions" type="Label" parent="."]
offset_left = 203.0
offset_top = 41.0
offset_right = 975.0
offset_bottom = 373.0
text = "Welcome to the playable prototype for my Rhythm game.

Line up shapes within their corresponding receiver in time with the music
a hint shape is provided to indicate the next shape position and rotation
-Mouse buttons to rotation left and right
-Letter A to input shape

Scoring
-Timing: input piece at the correct time
-position: have the piece in the center of the receiver
-rotation: have the piece in the correct rotation

Prototype will close automatically when the music finishes"

[connection signal="timeout" from="Beats" to="." method="_on_in_timer_timeout"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
